# zkl_windows

./: .clang-format  .gitignore  CMakeLists.txt  lv_conf.h  main.c
lvgl/src/: lv_conf_internal.h
ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_themes.c  ui_themes.h
ui/components/: ui_comp.c  ui_comp.h  ui_comp_cmpdatetimebar.c  ui_comp_cmpdatetimebar.h  ui_comp_cmpfocuscell.c  ui_comp_cmpfocuscell.h  ui_comp_cmpmodetoggle.c  ui_comp_cmpmodetoggle.h  ui_comp_cmptableheader.c  ui_comp_cmptableheader.h  ui_comp_cmptablerow4col.c  ui_comp_cmptablerow4col.h  ui_comp_div_.c  ui_comp_div_.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_num.c  ui_comp_num.h  ui_comp_paneleg.c  ui_comp_paneleg.h  ui_comp_rowenter.c  ui_comp_rowenter.h  ui_comp_rowitem.c  ui_comp_rowitem.h  ui_comp_rowitem1.c  ui_comp_rowitem1.h  ui_comp_rowlabel.c  ui_comp_rowlabel.h  ui_comp_rowswitch.c  ui_comp_rowswitch.h
ui/fonts/: ui_font_WebnarItalic24.c  ui_font_WebnarItalic32.c  ui_font_WebnarMedium15.c  ui_font_WebnarMedium18.c  ui_font_WebnarRegular13.c  ui_font_WebnarRegular15.c  ui_font_WebnarRegular18.c  ui_font_WebnarRegular20.c  ui_font_WebnarRegular24.c  ui_font_WebnarSemiBold12.c  ui_font_WebnarSemiBold18.c  ui_font_WebnarSemiBold24.c
ui/images/: ui_img_1180263152.c  ui_img_1501960782.c  ui_img_1583056019.c  ui_img_1590413862.c  ui_img_1711277335.c  ui_img_2032974965.c  ui_img_98533973.c  ui_img_img_arrowpitchimage_png.c  ui_img_img_arrowrollimage_png.c  ui_img_img_arrowyawimage_png.c  ui_img_img_azimuth_final_png.c  ui_img_img_backgroundreflesh_png.c  ui_img_img_ballistic_png.c  ui_img_img_battery1_png.c  ui_img_img_brightness_png.c  ui_img_img_compass_png.c  ui_img_img_compasscalibration_png.c  ui_img_img_contrast_png.c  ui_img_img_deadpixelrepair_png.c  ui_img_img_deletefile_png.c  ui_img_img_dots_png.c  ui_img_img_enlarge_png.c  ui_img_img_enter2_png.c  ui_img_img_guntype1_png.c  ui_img_img_imagedown_png.c  ui_img_img_imagemode_png.c  ui_img_img_imageup_png.c  ui_img_img_img_arrow_down_png.c  ui_img_img_img_arrow_up_png.c  ui_img_img_img_next_png.c  ui_img_img_img_prev_png.c  ui_img_img_img_stop_png.c  ui_img_img_left_png.c  ui_img_img_lrf_png.c  ui_img_img_microphone_png.c  ui_img_img_pip_png.c  ui_img_img_ravrecording_png.c  ui_img_img_record_png.c  ui_img_img_reticle_png.c  ui_img_img_right_png.c  (+8 more)
ui/screens/: ui_MainPage.c  ui_MainPage.h  ui_PlayBar.c  ui_PlayBar.h  ui_ScrFileMgr.c  ui_ScrFileMgr.h
ui/user/: ui_attitude_scale.c  ui_attitude_scale.h
