SET(SOURCES components/ui_comp_cmpdatetimebar.c
    components/ui_comp_cmpfocuscell.c
    components/ui_comp_cmpmodetoggle.c
    components/ui_comp_cmptableheader.c
    components/ui_comp_cmptablerow4col.c
    components/ui_comp_div_.c
    components/ui_comp_num.c
    components/ui_comp_paneleg.c
    components/ui_comp_rowenter.c
    components/ui_comp_rowitem.c
    components/ui_comp_rowitem1.c
    components/ui_comp_rowlabel.c
    components/ui_comp_rowswitch.c
    components/ui_comp.c
    screens/ui_MainPage.c
    screens/ui_ScrFileMgr.c
    screens/ui_PlayBar.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_img_sd_png.c
    images/ui_img_1590413862.c
    images/ui_img_img_guntype1_png.c
    images/ui_img_img_enlarge_png.c
    images/ui_img_img_wifi_png.c
    images/ui_img_img_battery1_png.c
    images/ui_img_img_arrowyawimage_png.c
    images/ui_img_img_arrowrollimage_png.c
    images/ui_img_img_arrowpitchimage_png.c
    images/ui_img_img_record_png.c
    images/ui_img_img_lrf_png.c
    images/ui_img_img_enter2_png.c
    images/ui_img_img_imagemode_png.c
    images/ui_img_img_dots_png.c
    images/ui_img_img_brightness_png.c
    images/ui_img_img_contrast_png.c
    images/ui_img_img_sharpness_png.c
    images/ui_img_img_ultraclear_png.c
    images/ui_img_img_pip_png.c
    images/ui_img_1583056019.c
    images/ui_img_img_tilt_png.c
    images/ui_img_img_compass_png.c
    images/ui_img_img_reticle_png.c
    images/ui_img_img_ballistic_png.c
    images/ui_img_img_microphone_png.c
    images/ui_img_img_ravrecording_png.c
    images/ui_img_img_standbytimer_png.c
    images/ui_img_img_compasscalibration_png.c
    images/ui_img_img_deadpixelrepair_png.c
    images/ui_img_img_statusbar_png.c
    images/ui_img_img_deletefile_png.c
    images/ui_img_img_setting_png.c
    images/ui_img_98533973.c
    images/ui_img_1180263152.c
    images/ui_img_2032974965.c
    images/ui_img_1501960782.c
    images/ui_img_1711277335.c
    images/ui_img_img_left_png.c
    images/ui_img_img_right_png.c
    images/ui_img_img_imageup_png.c
    images/ui_img_img_imagedown_png.c
    images/ui_img_img_img_arrow_up_png.c
    images/ui_img_img_img_arrow_down_png.c
    images/ui_img_img_img_prev_png.c
    images/ui_img_img_img_stop_png.c
    images/ui_img_img_img_next_png.c
    fonts/ui_font_WebnarItalic24.c
    fonts/ui_font_WebnarItalic32.c
    fonts/ui_font_WebnarMedium15.c
    fonts/ui_font_WebnarMedium18.c
    fonts/ui_font_WebnarRegular13.c
    fonts/ui_font_WebnarRegular15.c
    fonts/ui_font_WebnarRegular18.c
    fonts/ui_font_WebnarRegular20.c
    fonts/ui_font_WebnarRegular24.c
    fonts/ui_font_WebnarSemiBold12.c
    fonts/ui_font_WebnarSemiBold18.c
    fonts/ui_font_WebnarSemiBold24.c)

add_library(ui ${SOURCES})
